# brieffenster-generator

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE.md  Pipfile  README.md  TODO.txt  brieffenster.ini  brieffenster.py  build-docker  configuration.py  docker-build  docker-compose.yml  docker-entrypoint  docker-entrypoint.sh  justfile  pyproject.toml  run-docker  run-docker-prod
src/: brieffenster.conf  brieffenster.py  wsgi.py
src/brieffenster_generator/: app.py  wsgi.py
src/brieffenster_generator/templates/: form.html  layout.html
src/templates/: Vorlage.tex  form.html  layout.html
templates/: Vorlage.tex  form.html  layout.html
