[tool.poetry]
name = "brieffenster-generator"
version = "0.1.1"
description = "Live @ https://brieffenster.jonasgroeger.de/"
authors = ["Jonas Groeger <jonas@huntun.de>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.2"
reportlab = "^4.0.4"
Pillow = "^11.0.0"
gunicorn = "23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
