[project]
name = "brieffenster-generator"
version = "0.1.2"
description = "Live @ https://brieffenster.jonasgroeger.de/"
authors = [{ name = "Jonas Groeger", email = "jonas@huntun.de" }]
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE.md"]
readme = "README.md"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
    "reportlab>=4.4.1",
    "pillow>=12.1.0",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"